--- a/app/src/main/res/layout/activity_bind_panorama_cam.xml
+++ b/app/src/main/res/layout/activity_bind_panorama_cam.xml
@@ -21,7 +21,7 @@
         android:layout_alignParentEnd="true"
         android:padding="@dimen/y15"
         android:src="@drawable/icon_explain_gray"
-        android:visibility="invisible" />
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/tv_main_content"
@@ -54,10 +54,8 @@
         android:layout_centerInParent="true" />
 
     <FrameLayout
-        android:layout_marginTop="@dimen/y60"
         android:layout_width="@dimen/y141"
         android:layout_height="@dimen/y234"
-        android:layout_below="@+id/tv_description"
         android:layout_centerInParent="true"
         android:background="@drawable/add_image_panoramic_camera">
 
