--- a/app/src/main/res/drawable/camera720_loading.xml
+++ b/app/src/main/res/drawable/camera720_loading.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animated-rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:drawable="@drawable/loading_one"
+    android:drawable="@drawable/progress_bar"
     android:duration="800"
     android:fromDegrees="0.0"
     android:pivotX="50.0%"
