--- a/app/src/main/res/drawable/progress_bar.xml
+++ b/app/src/main/res/drawable/progress_bar.xml
@@ -7,6 +7,7 @@
 
     <shape
         android:shape="ring"
+        android:thickness="1.5dp"
         android:useLevel="false">
         <gradient
             android:centerY="0.50"
