--- a/app/src/main/res/layout/activity_panorama_camera.xml
+++ b/app/src/main/res/layout/activity_panorama_camera.xml
@@ -74,8 +74,8 @@
 
             <ImageView
                 android:id="@+id/act_panorama_camera_banner_information_connection_icon"
-                android:layout_width="@dimen/y17"
-                android:layout_height="@dimen/y17"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="@dimen/y16"
                 android:layout_marginStart="@dimen/y16"
