--- a/app/src/main/res/layout/layout_bottom_footer.xml
+++ b/app/src/main/res/layout/layout_bottom_footer.xml
@@ -7,26 +7,25 @@
         android:layout_height="wrap_content"
         android:minHeight="@dimen/y48">
 
-        <com.cylan.jiafeigou.widget.SimpleProgressBar
+        <ProgressBar
             android:id="@+id/footer_progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/y10"
+            android:layout_width="@dimen/y19"
+            android:layout_height="@dimen/y19"
+            android:indeterminateDrawable="@drawable/progress_bar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/footer_content_text"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:progress_point_radius="@dimen/x3"
-            app:progress_radius="@dimen/x10"
-            app:progress_stroke_color="@color/color_cecece" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/footer_content_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/y6"
             android:text="@string/LOADING"
-            android:textColor="@color/color_cecece"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp14"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/footer_progress_bar"
