--- a/app/src/main/res/layout/layout_panorama_album_pop_menu.xml
+++ b/app/src/main/res/layout/layout_panorama_album_pop_menu.xml
@@ -6,8 +6,8 @@
 
 
     <android.support.v7.widget.CardView
-        android:layout_width="@dimen/y192"
-        android:layout_height="@dimen/y145"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="#FFFFFF"
         app:cardCornerRadius="@dimen/y3">
 
