--- a/app/src/main/res/layout/fragment_hardware_update.xml
+++ b/app/src/main/res/layout/fragment_hardware_update.xml
@@ -142,6 +142,11 @@
             android:padding="@dimen/x10"
             android:textColor="#4B9FD5"
             android:textSize="@dimen/sp16" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Tap1_Update_Precautions" />
     </LinearLayout>
 
     <LinearLayout
