直播界面若干 bug 修复

--- a/app/src/main/res/layout/fragment_hardware_update.xml
+++ b/app/src/main/res/layout/fragment_hardware_update.xml
@@ -155,7 +155,7 @@
         android:layout_height="@dimen/y64"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="invisible">
 
         <View
             android:layout_width="match_parent"
