--- a/app/src/main/res/layout/fragment_hardware_update.xml
+++ b/app/src/main/res/layout/fragment_hardware_update.xml
@@ -146,7 +146,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/Tap1_Update_Precautions" />
+            android:layout_marginEnd="@dimen/y36"
+            android:layout_marginStart="@dimen/y36"
+            android:layout_marginTop="@dimen/y6"
+            android:gravity="center_horizontal"
+            android:text="@string/Tap1_Update_Precautions"
+            android:textColor="#8C8C8C"
+            android:textSize="@dimen/sp12" />
     </LinearLayout>
 
     <LinearLayout
